// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalSEOUpsell matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: 600px;
  margin: 16px 0;
  padding: 20px 28px;
  position: relative;
  z-index: 1;
}

.c0:before {
  content: "";
  background-image: url(https://example.com/image);
  background-size: 100% 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100px;
  margin: 0 20px 0 0;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c3.c3 {
  font-size: 1.15em;
  font-weight: bold;
  margin: 4px 0;
}

.c4 {
  margin: 4px 0;
}

.c5 {
  margin: 4px 0;
}

<div
  className="c0"
>
  <test-file-stub
    className="c1"
  />
  <div
    className="c2"
  >
    <h3
      className="c3"
    >
      Serving local customers?
    </h3>
    <p
      className="c4"
    >
      Truly optimize your site for a local audience with our Local SEO plugin! Optimized address details, opening hours, store locator and pickup option!
    </p>
    <a
      className="c5"
      href="https://example.com"
      rel="noopener"
      target="_blank"
    >
      Get the Local SEO plugin now
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
</div>
`;

exports[`LocalSEOUpsell matches the snapshot in right to left mode 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: 600px;
  margin: 16px 0;
  padding: 20px 28px;
  position: relative;
  z-index: 1;
}

.c0:before {
  content: "";
  background-image: url(https://example.com/image);
  background-size: 100% 100%;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: 100px;
  margin: 0 0 0 20px;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1em;
}

.c3.c3 {
  font-size: 1.15em;
  font-weight: bold;
  margin: 4px 0;
}

.c4 {
  margin: 4px 0;
}

.c5 {
  margin: 4px 0;
}

<div
  className="c0"
>
  <test-file-stub
    className="c1"
  />
  <div
    className="c2"
  >
    <h3
      className="c3"
    >
      Serving local customers?
    </h3>
    <p
      className="c4"
    >
      Truly optimize your site for a local audience with our Local SEO plugin! Optimized address details, opening hours, store locator and pickup option!
    </p>
    <a
      className="c5"
      href="https://example.com"
      rel="noopener"
      target="_blank"
    >
      Get the Local SEO plugin now
      <span
        className="A11yNotice-sc-1feyioo-0 gHCoqL"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
</div>
`;
